# pact-cli

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  EXTENSIONS.md  Makefile  README.md  action.yml  install.ps1  install.sh  mise.toml  release-plz.toml
.github/: renovate.json
.github/workflows/: cargo-publish.yml  cli.yml  docker.yml  legacy-artifacts.yml  notify-homebrew.yml  publish-containers.yml  release-plz.yml  release.yml  reusable-build.yml  reusable-release.yml  test.yml
docker/: Containerfile.alpine  Containerfile.debian  Dockerfile.alpine  Dockerfile.debian  NOTES.md  README.md  build  test
examples/: mock_example-rust.sh  stub_example-rust.sh
src/: bin.rs  cli.rs
src/cli/: extension.rs  otel.rs  pact_broker_docker.rs  pact_broker_ruby.rs
tests/: cli-tests.rs
