[package]
name = "pact"
version = "0.9.3"
authors = ["Yousaf Nabi <you@saf.dev>"]
edition = "2021"
description = "Pact consolidated CLI - pact_core_mock_server, pact_verifier, pact-stub-server, pact-plugin-cli, pact-broker-cli in a single binary"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-cli"
readme = "README.md"
keywords = ["pact-mock-server", "pact-verifier", "pact-stub-server", "pact-plugin", "pact-broker-client"]
license = "MIT"
include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "/README.md",
    "LICENSE",
    "CHANGELOG.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.5.51", features = ["derive", "env", "cargo"] }
clap_complete = { version = "4.5.1", features = [] }
home = "0.5.5"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
comfy-table = "7.2.1"

## Pact CLI components
pact-stub-server = { version = "0.7.0" }
pact_mock_server_cli = { version = "2.0.0" }
pact-plugin-cli = { version = "0.2.0" }
pact_verifier_cli = { version = "1.3.0" }
pact-broker-cli = { version = "0.6.0" }

## Otel

tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
opentelemetry = "0.31.0"
opentelemetry-http = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-stdout = { version = "0.31.0", features = ["trace", "logs"] }
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "logs", "tls", "tls-roots"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-appender-tracing = "0.31.0"
tracing = { version= "0.1.41", features = ["std"]}
tracing-subscriber = { version = "0.3.20", features = ["env-filter","registry", "std", "fmt"] }
tracing-opentelemetry = "0.32.0"
reqwest-tracing = { version = "0.7.0", features = ["tracing-opentelemetry_0_31_pkg", "opentelemetry_0_30"] }

# reqwest-tracing = { version = "0.5.8", features = ["opentelemetry_0_30"] }
# tracing-opentelemetry = "0.31.0"

[dev-dependencies]
trycmd = "1.0.0"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
codegen-units = 1
panic = "abort"
lto = true

[profile.release-aarch64-freebsd]
inherits = "release"
panic = "unwind"
# if panic abort is set for aarch64 freebsd, it fails in cross
# https://github.com/cross-rs/cross/issues/1363#issuecomment-1783917450

[target.'cfg(target_os = "freebsd")'.dependencies]
indexmap = { version = "2.0.0", features = ["std"] }
# requires std feature for detection with cross for aarch64-unknown-freebsd target
# https://github.com/tower-rs/tower/issues/466
# https://github.com/indexmap-rs/indexmap/pull/145


# [lib]
# name = "pact"  # Name of the library
# crate-type = ["cdylib", "staticlib"]  # For compiling to a shared library

[[bin]]
name = "pact"
path = "src/bin.rs"
