[package]
name = "pact"
version = "0.10.2"
authors = ["Yousaf Nabi <you@saf.dev>"]
edition = "2021"
description = "Pact consolidated CLI - pact_core_mock_server, pact_verifier, pact-stub-server, pact-plugin-cli, pact-broker-cli in a single binary"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-cli"
readme = "README.md"
keywords = [
  "pact-broker-client",
  "pact-mock-server",
  "pact-plugin",
  "pact-stub-server",
  "pact-verifier"
]
license = "MIT"
include = [
  "/README.md",
  "CHANGELOG.md",
  "Cargo.lock",
  "Cargo.toml",
  "LICENSE",
  "src/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pact"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.5.51", features = ["cargo", "derive", "env"] }
clap_complete = { version = "4.5.1", features = [] }
comfy-table = "7.2.1"
home = "0.5.5"
reqwest = { version = "0.13", features = ["json"] }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

## Pact CLI components
pact-broker-cli = "0.7.1"
pact_mock_server_cli = "2.0.0"
pact-plugin-cli = "0.2.0"
pact-stub-server = "0.7.1"
pact_verifier_cli = "1.3.2"

## Otel
opentelemetry = "0.32.0"
opentelemetry-appender-tracing = "0.32.0"
opentelemetry-http = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", features = [
  "logs",
  "tls",
  "tls-roots",
  "trace"
] }
opentelemetry_sdk = "0.32.0"
opentelemetry-semantic-conventions = "0.32.0"
opentelemetry-stdout = { version = "0.32.0", features = ["logs", "trace"] }
reqwest-tracing = { version = "0.7.0", features = [
  "opentelemetry_0_32",
] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "fmt",
  "registry",
  "std"
] }

[dev-dependencies]
trycmd = "=1.2.0"

[profile.release]
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true
panic = "abort"
codegen-units = 1
